--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,12 +16,18 @@
   }
 }
 
+html {
+  padding: 0;
+  overflow-x: hidden;
+}
+
+#__next {
+  height: 100%;
+}
+
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100vw;
 }
