--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -1,7 +1,7 @@
 .title {
     margin: auto;
     animation: bounce 2s infinite;
-    padding: 50px;
+    padding-top: 25px;
 }
 
 @keyframes bounce {
