Guess the flag result page

--- a/src/styles/guessTheFlag.module.css
+++ b/src/styles/guessTheFlag.module.css
@@ -31,3 +31,19 @@
     color: white;
     font-size: 2em;
 }
+
+.resultContainer {
+    text-align: center;
+}
+
+.resultScore {
+    color: white;
+    font-size: 3em;
+    margin-bottom: 25px;
+}
+
+.restartButton {
+    font-size: 2em;
+    background-color: white;
+    padding: 10px 25px 10px 25px;
+}
